--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -27,6 +27,8 @@ body {
   line-height: 1.66667;
   padding-left: 30px;
   padding-right: 30px;
+  background-color: pink !important;
+  background-image: none !important;
 }
 
 a {
